--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
     "actions-on-google": "^1.5.x",
     "firebase-admin": "^5.4.2",
     "firebase-functions": "^0.7.1",
-    "apiai": "^4.0.3"
+    "apiai": "^4.0.3",
+    "moment-timezone": "^0.5.11"
   }
 }
